@@ -1,11 +1,28 @@
 #ifdef HAVE_CONFIG_H
 #include "config.h"
 #endif
+
 #include "pcre_internal.h"
 
 /* Unicode character database. */
 /* This file was autogenerated by the MultiStage2.py script. */
 /* Total size: 52808 bytes, block size: 128. */
+
+/* The tables herein are needed only when UCP support is built */
+/* into PCRE. This module should not be referenced otherwise, so */
+/* it should not matter whether it is compiled or not. However */
+/* a comment was received about space saving - maybe the guy linked */
+/* all the modules rather than using a library - so we include a */
+/* condition to cut out the tables when not needed. But don't leave */
+/* a totally empty module because some compilers barf at that. */
+/* Instead, just supply small dummy tables. */
+
+#ifndef SUPPORT_UCP
+const ucd_record _pcre_ucd_records[] = {{0,0,0 }};
+const uschar _pcre_ucd_stage1[] = {0};
+const pcre_uint16 _pcre_ucd_stage2[] = {0};
+#else
+
 /* When recompiling tables with a new Unicode version,
 please check types in the structure definition from pcre_internal.h:
 typedef struct {
@@ -13,6 +30,7 @@ uschar property_0;
 uschar property_1;
 pcre_int32 property_2;
 } ucd_record; */
+
 
 const ucd_record _pcre_ucd_records[] = { /* 3656 bytes, record size 8 */
   {     9,      0,      0, }, /*   0 */
@@ -2607,3 +2625,4 @@ const pcre_uint16 _pcre_ucd_stage2[] = { /* 40448 bytes, block = 128 */
 #if UCD_BLOCK_SIZE != 128
 #error Please correct UCD_BLOCK_SIZE in pcre_internal.h
 #endif
+#endif  /* SUPPORT_UCP */
